# stboite

./: .gitignore
microservices/apis/display/eink/waveshare/2in13/: .dockerignore  Dockerfile  Pipfile  docker-compose.yaml  grpc_server.py
microservices/pkg/protos/: pyproject.toml
microservices/pkg/protos/v1/: __init__.py  stboite_display.proto  stboite_display_pb2.py  stboite_display_pb2_grpc.py  stboite_input.proto  stboite_input_pb2.py  stboite_input_pb2_grpc.py
microservices/pkg/python/: pyproject.toml
microservices/pkg/python/src/StBoite/display/v1/: __init__.py
microservices/pkg/python/src/stboite/display/v1/: __init__.py
microservices/src/display/eink/waveshare/2in13/: Pipfile  waveshare_2in13.py
microservices/src/display/eink/waveshare/2in13/example/: grpc_client.py
